[gd_scene load_steps=3 format=2]

[ext_resource path="res://PauseMenu/DebugMenu.gd" type="Script" id=1]
[ext_resource path="res://OutlinedPolygon2D/OutlinedPolygon2D.gd" type="Script" id=2]

[node name="DebugMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Frame" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 0, 0, 224, 0, 224, 480, 0, 480, 0, 0 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 36.0
margin_top = 8.0
margin_right = 213.0
margin_bottom = 468.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Debug Option 1
Debug Option 2
Debug Option 3"

[node name="CurrentOption" type="Node2D" parent="."]
position = Vector2( 21, 15 )
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="CurrentOption"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -8, -8, -8, 8, 8, 8, 8, -8, -8, -8 )
[connection signal="option_selected" from="." to="." method="_on_DebugMenu_option_selected"]
